swapped is blank for older java version friendly trim.isempty